plugins/kotlin/idea/tests/testData/multiplatform/ktij22295/jvm/jvm.kt
interface <!LINE_MARKER("descr='Is implemented by SimpleEntity Press ... to navigate'")!>I2<!><T21, T22 : I1<T21>>

actual typealias <!LINE_MARKER("descr='Has expects in common module'")!>Shared<!> = Any

class SimpleEntity : I2<Shared, I1ImplOfShared>
